@@ -1,7 +1,11 @@
 NEWS
 
-2
+3
 ENHANCEMENT:
+* Load custom food
+
+2
+ENHANCEMENTS:
 * Added 4th game: balanced meals
 * Add calories to Name game
 
